<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnipiApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh &#8230;</string>
    <string name="action_share">Share</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="title_activity_maps_fragment">MapsFragmentActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_language_greek">Greek</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_key">Language</string>
    <string name="pref_language_label">Prefered Language</string>
    <string name="form_name">Name</string>
    <string name="form_email">Email</string>
    <string name="form_phone">Phone</string>
    <string name="form_message">Message</string>
    <string name="form_phone_size">The size of your PhoneNumber is not 10 numbers</string>
    <string name="Send_Message">Send</string>
    <string name="sending">Sending &#8230;</string>
    <string name="Invalid_email">Invalid Email Address</string>
    <string name="welcome_body">\t\t Software Engineering \n\n\t\t Welcome to android application for software engineering laboratory at the IT department of the University of Piraeus. \n 
\t\t In this application you can check out all the new and Communication Laboratory, and you have the ability to communicate by sending e-mail for any questions and clarifications of the lesson.\n\n\n</string>

</resources>